HelloUltraviolet/Fixtures/RejectedSource/Modules/ReservedModuleKeyword/Source/if/Main.uv
//! Rejected module aggregation specimen for a reserved keyword module path.

public procedure reservedModuleKeywordReference() -> i32 {
    return 1
}
